--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "App.js",
   "scripts": {
     "test": "jest",
-    "start" : "parcel index.html"
+    "start": "parcel index.html"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,8 @@
   "dependencies": {
     "parcel": "^2.12.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
     "process": "^0.11.10"
